--- a/analyzer/rootana/configurations/time_offset.cfg
+++ b/analyzer/rootana/configurations/time_offset.cfg
@@ -6,290 +6,265 @@ dump_contents
 analyse_pulses = MakeAnalysedPulses
 
 ## Plot TDiffs
-# r11f = CalcCoarseTimeOffset(SiR1-1-F, muSc) 
-# r12f = CalcCoarseTimeOffset(SiR1-2-F, muSc) 
-# r13f = CalcCoarseTimeOffset(SiR1-3-F, muSc) 
-# r14f = CalcCoarseTimeOffset(SiR1-4-F, muSc) 
-# r11s = CalcCoarseTimeOffset(SiR1-1-S, muSc) 
-# r12s = CalcCoarseTimeOffset(SiR1-2-S, muSc) 
-# r13s = CalcCoarseTimeOffset(SiR1-3-S, muSc) 
-# r14s = CalcCoarseTimeOffset(SiR1-4-S, muSc) 
+# r11f = PlotTDiff(SiR1-1-F, muSc, 0., 500., false)
+# r12f = PlotTDiff(SiR1-2-F, muSc, 0., 500., false)
+# r13f = PlotTDiff(SiR1-3-F, muSc, 0., 500., false)
+# r14f = PlotTDiff(SiR1-4-F, muSc, 0., 500., false)
+# r11s = PlotTDiff(SiR1-1-S, muSc, 1500., 3000., false)
+# r12s = PlotTDiff(SiR1-2-S, muSc, 1500., 3000., false)
+# r13s = PlotTDiff(SiR1-3-S, muSc, 1500., 3000., false)
+# r14s = PlotTDiff(SiR1-4-S, muSc, 1500., 3000., false)
 
-# l11f = CalcCoarseTimeOffset(SiL1-1-F, muSc) 
-# l12f = CalcCoarseTimeOffset(SiL1-2-F, muSc) 
-# l13f = CalcCoarseTimeOffset(SiL1-3-F, muSc) 
-# l14f = CalcCoarseTimeOffset(SiL1-4-F, muSc) 
-# l11s = CalcCoarseTimeOffset(SiL1-1-S, muSc) 
-# l12s = CalcCoarseTimeOffset(SiL1-2-S, muSc) 
-# l13s = CalcCoarseTimeOffset(SiL1-3-S, muSc) 
-# l14s = CalcCoarseTimeOffset(SiL1-4-S, muSc) 
+# l11f = PlotTDiff(SiL1-1-F, muSc, 0., 500., false)
+# l12f = PlotTDiff(SiL1-2-F, muSc, 0., 2000., false)
+# l13f = PlotTDiff(SiL1-3-F, muSc, 0., 500., false)
+# l14f = PlotTDiff(SiL1-4-F, muSc, 0., 500., false)
+# l11s = PlotTDiff(SiL1-1-S, muSc, 1500., 3000., false)
+# l12s = PlotTDiff(SiL1-2-S, muSc, 1500., 3000., false)
+l13s = PlotTDiff(SiL1-3-S, muSc, 1000., 3000., false)
+# l14s = PlotTDiff(SiL1-4-S, muSc, 1500., 3000., false)
 
-r2s = CalcCoarseTimeOffset(SiR2-S, muSc) 
-# l2s = CalcCoarseTimeOffset(SiL2-S, muSc) 
-# r2f = CalcCoarseTimeOffset(SiR2-F, muSc) 
-# l2f = CalcCoarseTimeOffset(SiL2-F, muSc) 
+# r2s = PlotTDiff(SiR2-S, muSc, 3000., 3500., false)
+# l2s = PlotTDiff(SiL2-S, muSc, 3000., 3500., false)
 
-# sv = CalcCoarseTimeOffset(ScVe, muSc) 
-# gf = CalcCoarseTimeOffset(Ge-F, muSc) 
-# gs = CalcCoarseTimeOffset(Ge-S, muSc) 
-# sG_mS   = CalcCoarseTimeOffset(ScGe, muSc) 
+r2f = PlotTDiff(SiR2-F, muSc, 250., 750., false)
+l2f = PlotTDiff(SiL2-F, muSc, 250., 750., false)
+
+# sv = PlotTDiff(ScVe, muSc, -200., 200., false)
+gf = PlotTDiff(Ge-F, muSc, 29000., 34000., false)
+gs = PlotTDiff(Ge-S, muSc, 30000., 35000., false)
+
+# r2s_check_bump = PlotTDiff(SiR2-S, muSc, 2000., 8000., false)
+# l2s_check_bump = PlotTDiff(SiL2-S, muSc, 2000., 8000., false)
+
 
 
 [ analyse_pulses ]
-# muSc=CFTimeNoShift(0.10)
-# muSc+=CFTimeNoShift(0.20)
-# muSc+=CFTimeNoShift(0.30)
-# muSc+=CFTimeNoShift(0.40)
-# muSc+=CFTimeNoShift(0.50)
-muSc=CFTimeNoShift(0.60)
-# muSc+=CFTimeNoShift(0.70)
-# muSc+=CFTimeNoShift(0.80)
-# muSc+=CFTimeNoShift(0.90)
-muSc+=MaxBinNoShift
+muSc=CFTimeMBAmp(0.10,true)
+muSc+=CFTimeMBAmp(0.20,true)
+muSc+=CFTimeMBAmp(0.30,true)
+muSc+=CFTimeMBAmp(0.40,true)
+muSc+=CFTimeMBAmp(0.50,true)
+muSc+=CFTimeMBAmp(0.60,true)
+muSc+=CFTimeMBAmp(0.70,true)
+muSc+=CFTimeMBAmp(0.80,true)
+muSc+=CFTimeMBAmp(0.90,true)
 
+# ScVe=CFTimeMBAmp(0.10,true)
+# ScVe+=CFTimeMBAmp(0.20,true)
+# ScVe+=CFTimeMBAmp(0.30,true)
+# ScVe+=CFTimeMBAmp(0.40,true)
+# ScVe+=CFTimeMBAmp(0.50,true)
+# ScVe+=CFTimeMBAmp(0.60,true)
+# ScVe+=CFTimeMBAmp(0.70,true)
+# ScVe+=CFTimeMBAmp(0.80,true)
+# ScVe+=CFTimeMBAmp(0.90,true)
 
-# SiR2-S=CFTimeNoShift(0.10)
-# SiR2-S+=CFTimeNoShift(0.20)
-# SiR2-S+=CFTimeNoShift(0.30)
-# SiR2-S+=CFTimeNoShift(0.40)
-# SiR2-S+=CFTimeNoShift(0.50)
-SiR2-S=CFTimeNoShift(0.60)
-# SiR2-S+=CFTimeNoShift(0.70)
-# SiR2-S+=CFTimeNoShift(0.80)
-# SiR2-S+=CFTimeNoShift(0.90)
-SiR2-S+=MaxBinNoShift
-# SiR2-F=CFTimeNoShift(0.10)
-# SiR2-F+=CFTimeNoShift(0.20)
-# SiR2-F+=CFTimeNoShift(0.30)
-# SiR2-F+=CFTimeNoShift(0.40)
-# SiR2-F+=CFTimeNoShift(0.50)
-# SiR2-F+=CFTimeNoShift(0.60)
-# SiR2-F+=CFTimeNoShift(0.70)
-# SiR2-F+=CFTimeNoShift(0.80)
-# SiR2-F+=CFTimeNoShift(0.90)
-# SiR2-F+=MaxBinNoShift
+SiR2-F=CFTimeMBAmp(0.10,true)
+SiR2-F+=CFTimeMBAmp(0.20,true)
+SiR2-F+=CFTimeMBAmp(0.30,true)
+SiR2-F+=CFTimeMBAmp(0.40,true)
+SiR2-F+=CFTimeMBAmp(0.50,true)
+SiR2-F+=CFTimeMBAmp(0.60,true)
+SiR2-F+=CFTimeMBAmp(0.70,true)
+SiR2-F+=CFTimeMBAmp(0.80,true)
+SiR2-F+=CFTimeMBAmp(0.90,true)
+# SiR2-S=CFTimeMBAmp(0.60,true)
+SiL2-F=CFTimeMBAmp(0.10,true)
+SiL2-F+=CFTimeMBAmp(0.20,true)
+SiL2-F+=CFTimeMBAmp(0.30,true)
+SiL2-F+=CFTimeMBAmp(0.40,true)
+SiL2-F+=CFTimeMBAmp(0.50,true)
+SiL2-F+=CFTimeMBAmp(0.60,true)
+SiL2-F+=CFTimeMBAmp(0.70,true)
+SiL2-F+=CFTimeMBAmp(0.80,true)
+SiL2-F+=CFTimeMBAmp(0.90,true)
+# SiL2-S=CFTimeMBAmp(0.60,true)
 
-# SiL2-S=CFTimeNoShift(0.10)
-# SiL2-S+=CFTimeNoShift(0.20)
-# SiL2-S+=CFTimeNoShift(0.30)
-# SiL2-S+=CFTimeNoShift(0.40)
-# SiL2-S+=CFTimeNoShift(0.50)
-# SiL2-S+=CFTimeNoShift(0.60)
-# SiL2-S+=CFTimeNoShift(0.70)
-# SiL2-S+=CFTimeNoShift(0.80)
-# SiL2-S+=CFTimeNoShift(0.90)
-# SiL2-S+=MaxBinNoShift
-# SiL2-F=CFTimeNoShift(0.10)
-# SiL2-F+=CFTimeNoShift(0.20)
-# SiL2-F+=CFTimeNoShift(0.30)
-# SiL2-F+=CFTimeNoShift(0.40)
-# SiL2-F+=CFTimeNoShift(0.50)
-# SiL2-F+=CFTimeNoShift(0.60)
-# SiL2-F+=CFTimeNoShift(0.70)
-# SiL2-F+=CFTimeNoShift(0.80)
-# SiL2-F+=CFTimeNoShift(0.90)
-# SiL2-F+=MaxBinNoShift
+# SiR1-1-F=CFTimeMBAmp(0.10,true)
+# SiR1-1-F+=CFTimeMBAmp(0.20,true)
+# SiR1-1-F+=CFTimeMBAmp(0.30,true)
+# SiR1-1-F+=CFTimeMBAmp(0.40,true)
+# SiR1-1-F+=CFTimeMBAmp(0.50,true)
+# SiR1-1-F+=CFTimeMBAmp(0.60,true)
+# SiR1-1-F+=CFTimeMBAmp(0.60,true)
+# SiR1-1-F+=CFTimeMBAmp(0.70,true)
+# SiR1-1-F+=CFTimeMBAmp(0.80,true)
+# SiR1-1-F+=CFTimeMBAmp(0.90,true)
 
-# SiR1-1-F=CFTimeNoShift(0.10)
-# SiR1-1-F+=CFTimeNoShift(0.20)
-# SiR1-1-F+=CFTimeNoShift(0.30)
-# SiR1-1-F+=CFTimeNoShift(0.40)
-# SiR1-1-F+=CFTimeNoShift(0.50)
-# SiR1-1-F+=CFTimeNoShift(0.60)
-# SiR1-1-F+=CFTimeNoShift(0.70)
-# SiR1-1-F+=CFTimeNoShift(0.80)
-# SiR1-1-F+=CFTimeNoShift(0.90)
-# SiR1-1-F+=MaxBinNoShift
-# SiR1-1-S=CFTimeNoShift(0.10)
-# SiR1-1-S+=CFTimeNoShift(0.20)
-# SiR1-1-S+=CFTimeNoShift(0.30)
-# SiR1-1-S+=CFTimeNoShift(0.40)
-# SiR1-1-S+=CFTimeNoShift(0.50)
-# SiR1-1-S+=CFTimeNoShift(0.60)
-# SiR1-1-S+=CFTimeNoShift(0.70)
-# SiR1-1-S+=CFTimeNoShift(0.80)
-# SiR1-1-S+=CFTimeNoShift(0.90)
-# SiR1-1-S+=MaxBinNoShift
+# SiR1-1-S=CFTimeMBAmp(0.10,true)
+# SiR1-1-S+=CFTimeMBAmp(0.20,true)
+# SiR1-1-S+=CFTimeMBAmp(0.30,true)
+# SiR1-1-S+=CFTimeMBAmp(0.40,true)
+# SiR1-1-S+=CFTimeMBAmp(0.50,true)
+# SiR1-1-S+=CFTimeMBAmp(0.60,true)
+# SiR1-1-S+=CFTimeMBAmp(0.70,true)
+# SiR1-1-S+=CFTimeMBAmp(0.80,true)
+# SiR1-1-S+=CFTimeMBAmp(0.90,true)
 
-# SiR1-2-F=CFTimeNoShift(0.10)
-# SiR1-2-F+=CFTimeNoShift(0.20)
-# SiR1-2-F+=CFTimeNoShift(0.30)
-# SiR1-2-F+=CFTimeNoShift(0.40)
-# SiR1-2-F+=CFTimeNoShift(0.50)
-# SiR1-2-F+=CFTimeNoShift(0.60)
-# SiR1-2-F+=CFTimeNoShift(0.70)
-# SiR1-2-F+=CFTimeNoShift(0.80)
-# SiR1-2-F+=CFTimeNoShift(0.90)
-# SiR1-2-F+=MaxBinNoShift
-# SiR1-2-S=CFTimeNoShift(0.10)
-# SiR1-2-S+=CFTimeNoShift(0.20)
-# SiR1-2-S+=CFTimeNoShift(0.30)
-# SiR1-2-S+=CFTimeNoShift(0.40)
-# SiR1-2-S+=CFTimeNoShift(0.50)
-# SiR1-2-S+=CFTimeNoShift(0.60)
-# SiR1-2-S+=CFTimeNoShift(0.70)
-# SiR1-2-S+=CFTimeNoShift(0.80)
-# SiR1-2-S+=CFTimeNoShift(0.90)
-# SiR1-2-S+=MaxBinNoShift
+# SiR1-2-F=CFTimeMBAmp(0.10,true)
+# SiR1-2-F+=CFTimeMBAmp(0.20,true)
+# SiR1-2-F+=CFTimeMBAmp(0.30,true)
+# SiR1-2-F+=CFTimeMBAmp(0.40,true)
+# SiR1-2-F+=CFTimeMBAmp(0.50,true)
+# SiR1-2-F+=CFTimeMBAmp(0.60,true)
+# SiR1-2-F+=CFTimeMBAmp(0.60,true)
+# SiR1-2-F+=CFTimeMBAmp(0.70,true)
+# SiR1-2-F+=CFTimeMBAmp(0.80,true)
+# SiR1-2-F+=CFTimeMBAmp(0.90,true)
 
-# SiR1-3-F=CFTimeNoShift(0.10)
-# SiR1-3-F+=CFTimeNoShift(0.20)
-# SiR1-3-F+=CFTimeNoShift(0.30)
-# SiR1-3-F+=CFTimeNoShift(0.40)
-# SiR1-3-F+=CFTimeNoShift(0.50)
-# SiR1-3-F+=CFTimeNoShift(0.60)
-# SiR1-3-F+=CFTimeNoShift(0.70)
-# SiR1-3-F+=CFTimeNoShift(0.80)
-# SiR1-3-F+=CFTimeNoShift(0.90)
-# SiR1-3-F+=MaxBinNoShift
-# SiR1-3-S=CFTimeNoShift(0.10)
-# SiR1-3-S+=CFTimeNoShift(0.20)
-# SiR1-3-S+=CFTimeNoShift(0.30)
-# SiR1-3-S+=CFTimeNoShift(0.40)
-# SiR1-3-S+=CFTimeNoShift(0.50)
-# SiR1-3-S+=CFTimeNoShift(0.60)
-# SiR1-3-S+=CFTimeNoShift(0.70)
-# SiR1-3-S+=CFTimeNoShift(0.80)
-# SiR1-3-S+=CFTimeNoShift(0.90)
-# SiR1-3-S+=MaxBinNoShift
+# SiR1-2-S=CFTimeMBAmp(0.10,true)
+# SiR1-2-S+=CFTimeMBAmp(0.20,true)
+# SiR1-2-S+=CFTimeMBAmp(0.30,true)
+# SiR1-2-S+=CFTimeMBAmp(0.40,true)
+# SiR1-2-S+=CFTimeMBAmp(0.50,true)
+# SiR1-2-S+=CFTimeMBAmp(0.60,true)
+# SiR1-2-S+=CFTimeMBAmp(0.70,true)
+# SiR1-2-S+=CFTimeMBAmp(0.80,true)
+# SiR1-2-S+=CFTimeMBAmp(0.90,true)
 
-# SiR1-4-F=CFTimeNoShift(0.10)
-# SiR1-4-F+=CFTimeNoShift(0.20)
-# SiR1-4-F+=CFTimeNoShift(0.30)
-# SiR1-4-F+=CFTimeNoShift(0.40)
-# SiR1-4-F+=CFTimeNoShift(0.50)
-# SiR1-4-F+=CFTimeNoShift(0.60)
-# SiR1-4-F+=CFTimeNoShift(0.70)
-# SiR1-4-F+=CFTimeNoShift(0.80)
-# SiR1-4-F+=CFTimeNoShift(0.90)
-# SiR1-4-F+=MaxBinNoShift
-# SiR1-4-S=CFTimeNoShift(0.10)
-# SiR1-4-S+=CFTimeNoShift(0.20)
-# SiR1-4-S+=CFTimeNoShift(0.30)
-# SiR1-4-S+=CFTimeNoShift(0.40)
-# SiR1-4-S+=CFTimeNoShift(0.50)
-# SiR1-4-S+=CFTimeNoShift(0.60)
-# SiR1-4-S+=CFTimeNoShift(0.70)
-# SiR1-4-S+=CFTimeNoShift(0.80)
-# SiR1-4-S+=CFTimeNoShift(0.90)
-# SiR1-4-S+=MaxBinNoShift
+# SiR1-3-F=CFTimeMBAmp(0.10,true)
+# SiR1-3-F+=CFTimeMBAmp(0.20,true)
+# SiR1-3-F+=CFTimeMBAmp(0.30,true)
+# SiR1-3-F+=CFTimeMBAmp(0.40,true)
+# SiR1-3-F+=CFTimeMBAmp(0.50,true)
+# SiR1-3-F+=CFTimeMBAmp(0.60,true)
+# SiR1-3-F+=CFTimeMBAmp(0.60,true)
+# SiR1-3-F+=CFTimeMBAmp(0.70,true)
+# SiR1-3-F+=CFTimeMBAmp(0.80,true)
+# SiR1-3-F+=CFTimeMBAmp(0.90,true)
 
+# SiR1-3-S=CFTimeMBAmp(0.10,true)
+# SiR1-3-S+=CFTimeMBAmp(0.20,true)
+# SiR1-3-S+=CFTimeMBAmp(0.30,true)
+# SiR1-3-S+=CFTimeMBAmp(0.40,true)
+# SiR1-3-S+=CFTimeMBAmp(0.50,true)
+# SiR1-3-S+=CFTimeMBAmp(0.60,true)
+# SiR1-3-S+=CFTimeMBAmp(0.70,true)
+# SiR1-3-S+=CFTimeMBAmp(0.80,true)
+# SiR1-3-S+=CFTimeMBAmp(0.90,true)
 
-# SiL1-1-F=CFTimeNoShift(0.10)
-# SiL1-1-F+=CFTimeNoShift(0.20)
-# SiL1-1-F+=CFTimeNoShift(0.30)
-# SiL1-1-F+=CFTimeNoShift(0.40)
-# SiL1-1-F+=CFTimeNoShift(0.50)
-# SiL1-1-F+=CFTimeNoShift(0.60)
-# SiL1-1-F+=CFTimeNoShift(0.70)
-# SiL1-1-F+=CFTimeNoShift(0.80)
-# SiL1-1-F+=CFTimeNoShift(0.90)
-# SiL1-1-F+=MaxBinNoShift
-# SiL1-1-S=CFTimeNoShift(0.10)
-# SiL1-1-S+=CFTimeNoShift(0.20)
-# SiL1-1-S+=CFTimeNoShift(0.30)
-# SiL1-1-S+=CFTimeNoShift(0.40)
-# SiL1-1-S+=CFTimeNoShift(0.50)
-# SiL1-1-S+=CFTimeNoShift(0.60)
-# SiL1-1-S+=CFTimeNoShift(0.70)
-# SiL1-1-S+=CFTimeNoShift(0.80)
-# SiL1-1-S+=CFTimeNoShift(0.90)
-# SiL1-1-S+=MaxBinNoShift
+# SiR1-4-F=CFTimeMBAmp(0.10,true)
+# SiR1-4-F+=CFTimeMBAmp(0.20,true)
+# SiR1-4-F+=CFTimeMBAmp(0.30,true)
+# SiR1-4-F+=CFTimeMBAmp(0.40,true)
+# SiR1-4-F+=CFTimeMBAmp(0.50,true)
+# SiR1-4-F+=CFTimeMBAmp(0.60,true)
+# SiR1-4-F+=CFTimeMBAmp(0.60,true)
+# SiR1-4-F+=CFTimeMBAmp(0.70,true)
+# SiR1-4-F+=CFTimeMBAmp(0.80,true)
+# SiR1-4-F+=CFTimeMBAmp(0.90,true)
 
-# SiL1-2-F=CFTimeNoShift(0.10)
-# SiL1-2-F+=CFTimeNoShift(0.20)
-# SiL1-2-F+=CFTimeNoShift(0.30)
-# SiL1-2-F+=CFTimeNoShift(0.40)
-# SiL1-2-F+=CFTimeNoShift(0.50)
-# SiL1-2-F+=CFTimeNoShift(0.60)
-# SiL1-2-F+=CFTimeNoShift(0.70)
-# SiL1-2-F+=CFTimeNoShift(0.80)
-# SiL1-2-F+=CFTimeNoShift(0.90)
-# SiL1-2-F+=MaxBinNoShift
-# SiL1-2-S=CFTimeNoShift(0.10)
-# SiL1-2-S+=CFTimeNoShift(0.20)
-# SiL1-2-S+=CFTimeNoShift(0.30)
-# SiL1-2-S+=CFTimeNoShift(0.40)
-# SiL1-2-S+=CFTimeNoShift(0.50)
-# SiL1-2-S+=CFTimeNoShift(0.60)
-# SiL1-2-S+=CFTimeNoShift(0.70)
-# SiL1-2-S+=CFTimeNoShift(0.80)
-# SiL1-2-S+=CFTimeNoShift(0.90)
-# SiL1-2-S+=MaxBinNoShift
+# SiR1-4-S=CFTimeMBAmp(0.10,true)
+# SiR1-4-S+=CFTimeMBAmp(0.20,true)
+# SiR1-4-S+=CFTimeMBAmp(0.30,true)
+# SiR1-4-S+=CFTimeMBAmp(0.40,true)
+# SiR1-4-S+=CFTimeMBAmp(0.50,true)
+# SiR1-4-S+=CFTimeMBAmp(0.60,true)
+# SiR1-4-S+=CFTimeMBAmp(0.70,true)
+# SiR1-4-S+=CFTimeMBAmp(0.80,true)
+# SiR1-4-S+=CFTimeMBAmp(0.90,true)
 
-# SiL1-3-F=CFTimeNoShift(0.10)
-# SiL1-3-F+=CFTimeNoShift(0.20)
-# SiL1-3-F+=CFTimeNoShift(0.30)
-# SiL1-3-F+=CFTimeNoShift(0.40)
-# SiL1-3-F+=CFTimeNoShift(0.50)
-# SiL1-3-F+=CFTimeNoShift(0.60)
-# SiL1-3-F+=CFTimeNoShift(0.70)
-# SiL1-3-F+=CFTimeNoShift(0.80)
-# SiL1-3-F+=CFTimeNoShift(0.90)
-# SiL1-3-F+=MaxBinNoShift
-# SiL1-3-S=CFTimeNoShift(0.10)
-# SiL1-3-S+=CFTimeNoShift(0.20)
-# SiL1-3-S+=CFTimeNoShift(0.30)
-# SiL1-3-S+=CFTimeNoShift(0.40)
-# SiL1-3-S+=CFTimeNoShift(0.50)
-# SiL1-3-S+=CFTimeNoShift(0.60)
-# SiL1-3-S+=CFTimeNoShift(0.70)
-# SiL1-3-S+=CFTimeNoShift(0.80)
-# SiL1-3-S+=CFTimeNoShift(0.90)
-# SiL1-3-S+=MaxBinNoShift
+# SiL1-1-F=CFTimeMBAmp(0.10,true)
+# SiL1-1-F+=CFTimeMBAmp(0.20,true)
+# SiL1-1-F+=CFTimeMBAmp(0.30,true)
+# SiL1-1-F+=CFTimeMBAmp(0.40,true)
+# SiL1-1-F+=CFTimeMBAmp(0.50,true)
+# SiL1-1-F+=CFTimeMBAmp(0.60,true)
+# SiL1-1-F+=CFTimeMBAmp(0.60,true)
+# SiL1-1-F+=CFTimeMBAmp(0.70,true)
+# SiL1-1-F+=CFTimeMBAmp(0.80,true)
+# SiL1-1-F+=CFTimeMBAmp(0.90,true)
 
-# SiL1-4-F=CFTimeNoShift(0.10)
-# SiL1-4-F+=CFTimeNoShift(0.20)
-# SiL1-4-F+=CFTimeNoShift(0.30)
-# SiL1-4-F+=CFTimeNoShift(0.40)
-# SiL1-4-F+=CFTimeNoShift(0.50)
-# SiL1-4-F+=CFTimeNoShift(0.60)
-# SiL1-4-F+=CFTimeNoShift(0.70)
-# SiL1-4-F+=CFTimeNoShift(0.80)
-# SiL1-4-F+=CFTimeNoShift(0.90)
-# SiL1-4-F+=MaxBinNoShift
-# SiL1-4-S=CFTimeNoShift(0.10)
-# SiL1-4-S+=CFTimeNoShift(0.20)
-# SiL1-4-S+=CFTimeNoShift(0.30)
-# SiL1-4-S+=CFTimeNoShift(0.40)
-# SiL1-4-S+=CFTimeNoShift(0.50)
-# SiL1-4-S+=CFTimeNoShift(0.60)
-# SiL1-4-S+=CFTimeNoShift(0.70)
-# SiL1-4-S+=CFTimeNoShift(0.80)
-# SiL1-4-S+=CFTimeNoShift(0.90)
-# SiL1-4-S+=MaxBinNoShift
+# SiL1-1-S=CFTimeMBAmp(0.10,true)
+# SiL1-1-S+=CFTimeMBAmp(0.20,true)
+# SiL1-1-S+=CFTimeMBAmp(0.30,true)
+# SiL1-1-S+=CFTimeMBAmp(0.40,true)
+# SiL1-1-S+=CFTimeMBAmp(0.50,true)
+# SiL1-1-S+=CFTimeMBAmp(0.60,true)
+# SiL1-1-S+=CFTimeMBAmp(0.70,true)
+# SiL1-1-S+=CFTimeMBAmp(0.80,true)
+# SiL1-1-S+=CFTimeMBAmp(0.90,true)
 
+# SiL1-2-F=CFTimeMBAmp(0.10,true)
+# SiL1-2-F+=CFTimeMBAmp(0.20,true)
+# SiL1-2-F+=CFTimeMBAmp(0.30,true)
+# SiL1-2-F+=CFTimeMBAmp(0.40,true)
+# SiL1-2-F+=CFTimeMBAmp(0.50,true)
+# SiL1-2-F+=CFTimeMBAmp(0.60,true)
+# SiL1-2-F+=CFTimeMBAmp(0.60,true)
+# SiL1-2-F+=CFTimeMBAmp(0.70,true)
+# SiL1-2-F+=CFTimeMBAmp(0.80,true)
+# SiL1-2-F+=CFTimeMBAmp(0.90,true)
 
-# ScVe=CFTimeNoShift(0.10)
-# ScVe+=CFTimeNoShift(0.20)
-# ScVe+=CFTimeNoShift(0.30)
-# ScVe+=CFTimeNoShift(0.40)
-# ScVe+=CFTimeNoShift(0.50)
-# ScVe+=CFTimeNoShift(0.60)
-# ScVe+=CFTimeNoShift(0.70)
-# ScVe+=CFTimeNoShift(0.80)
-# ScVe+=CFTimeNoShift(0.90)
-# ScVe+=MaxBinNoShift
+# SiL1-2-S=CFTimeMBAmp(0.10,true)
+# SiL1-2-S+=CFTimeMBAmp(0.20,true)
+# SiL1-2-S+=CFTimeMBAmp(0.30,true)
+# SiL1-2-S+=CFTimeMBAmp(0.40,true)
+# SiL1-2-S+=CFTimeMBAmp(0.50,true)
+# SiL1-2-S+=CFTimeMBAmp(0.60,true)
+# SiL1-2-S+=CFTimeMBAmp(0.70,true)
+# SiL1-2-S+=CFTimeMBAmp(0.80,true)
+# SiL1-2-S+=CFTimeMBAmp(0.90,true)
 
-# Ge-S=CFTimeNoShift(0.10)
-# Ge-S+=CFTimeNoShift(0.20)
-# Ge-S+=CFTimeNoShift(0.30)
-# Ge-S+=CFTimeNoShift(0.40)
-# Ge-S+=CFTimeNoShift(0.50)
-# Ge-S+=CFTimeNoShift(0.60)
-# Ge-S+=CFTimeNoShift(0.70)
-# Ge-S+=CFTimeNoShift(0.80)
-# Ge-S+=CFTimeNoShift(0.90)
-# Ge-S+=MaxBinNoShift
-# Ge-F=CFTimeNoShift(0.10)
-# Ge-F+=CFTimeNoShift(0.20)
-# Ge-F+=CFTimeNoShift(0.30)
-# Ge-F+=CFTimeNoShift(0.40)
-# Ge-F+=CFTimeNoShift(0.50)
-# Ge-F+=CFTimeNoShift(0.60)
-# Ge-F+=CFTimeNoShift(0.70)
-# Ge-F+=CFTimeNoShift(0.80)
-# Ge-F+=CFTimeNoShift(0.90)
-# Ge-F+=MaxBinNoShift
+# SiL1-3-F=CFTimeMBAmp(0.10,true)
+# SiL1-3-F+=CFTimeMBAmp(0.20,true)
+# SiL1-3-F+=CFTimeMBAmp(0.30,true)
+# SiL1-3-F+=CFTimeMBAmp(0.40,true)
+# SiL1-3-F+=CFTimeMBAmp(0.50,true)
+# SiL1-3-F+=CFTimeMBAmp(0.60,true)
+# SiL1-3-F+=CFTimeMBAmp(0.60,true)
+# SiL1-3-F+=CFTimeMBAmp(0.70,true)
+# SiL1-3-F+=CFTimeMBAmp(0.80,true)
+# SiL1-3-F+=CFTimeMBAmp(0.90,true)
 
-# vim: set syn=cfg:
+SiL1-3-S=CFTimeMBAmp(0.10,true)
+SiL1-3-S+=CFTimeMBAmp(0.20,true)
+SiL1-3-S+=CFTimeMBAmp(0.30,true)
+SiL1-3-S+=CFTimeMBAmp(0.40,true)
+SiL1-3-S+=CFTimeMBAmp(0.50,true)
+SiL1-3-S+=CFTimeMBAmp(0.60,true)
+SiL1-3-S+=CFTimeMBAmp(0.70,true)
+SiL1-3-S+=CFTimeMBAmp(0.80,true)
+SiL1-3-S+=CFTimeMBAmp(0.90,true)
+
+# SiL1-4-F=CFTimeMBAmp(0.10,true)
+# SiL1-4-F+=CFTimeMBAmp(0.20,true)
+# SiL1-4-F+=CFTimeMBAmp(0.30,true)
+# SiL1-4-F+=CFTimeMBAmp(0.40,true)
+# SiL1-4-F+=CFTimeMBAmp(0.50,true)
+# SiL1-4-F+=CFTimeMBAmp(0.60,true)
+# SiL1-4-F+=CFTimeMBAmp(0.60,true)
+# SiL1-4-F+=CFTimeMBAmp(0.70,true)
+# SiL1-4-F+=CFTimeMBAmp(0.80,true)
+# SiL1-4-F+=CFTimeMBAmp(0.90,true)
+
+# SiL1-4-S=CFTimeMBAmp(0.10,true)
+# SiL1-4-S+=CFTimeMBAmp(0.20,true)
+# SiL1-4-S+=CFTimeMBAmp(0.30,true)
+# SiL1-4-S+=CFTimeMBAmp(0.40,true)
+# SiL1-4-S+=CFTimeMBAmp(0.50,true)
+# SiL1-4-S+=CFTimeMBAmp(0.60,true)
+# SiL1-4-S+=CFTimeMBAmp(0.70,true)
+# SiL1-4-S+=CFTimeMBAmp(0.80,true)
+# SiL1-4-S+=CFTimeMBAmp(0.90,true)
+
+Ge-S=CFTimeMBAmp(0.10,true)
+Ge-S+=CFTimeMBAmp(0.20,true)
+Ge-S+=CFTimeMBAmp(0.30,true)
+Ge-S+=CFTimeMBAmp(0.40,true)
+Ge-S+=CFTimeMBAmp(0.50,true)
+Ge-S+=CFTimeMBAmp(0.60,true)
+Ge-S+=CFTimeMBAmp(0.70,true)
+Ge-S+=CFTimeMBAmp(0.80,true)
+Ge-S+=CFTimeMBAmp(0.90,true)
+
+Ge-F=CFTimeMBAmp(0.10,true)
+Ge-F+=CFTimeMBAmp(0.20,true)
+Ge-F+=CFTimeMBAmp(0.30,true)
+Ge-F+=CFTimeMBAmp(0.40,true)
+Ge-F+=CFTimeMBAmp(0.50,true)
+Ge-F+=CFTimeMBAmp(0.60,true)
+Ge-F+=CFTimeMBAmp(0.70,true)
+Ge-F+=CFTimeMBAmp(0.80,true)
+Ge-F+=CFTimeMBAmp(0.90,true)
